--- a/resources/views/design/category.html
+++ b/resources/views/design/category.html
@@ -38,6 +38,8 @@
                 <input type="file" class="
                 custom-file-input " id="customFile" name="
                 image">
+                <label class="custom-file-label" for="
+                customFile">Choose file</label>
                 
             </div>
 
