--- a/resources/views/design/category.html
+++ b/resources/views/design/category.html
@@ -19,7 +19,7 @@
                 <h6 class="m-0 font-weight-bold text-primary">
                     Create Category</h6>
                </div>
-               <div class=""card-body">
+               <div class="card-body">
                <div class="form group">
                 <label for="">Name</label>
                 <input type="text" name="name" class="
@@ -33,13 +33,9 @@
             </div>
             <div class="form group">
                 <div class="custom-file">
-                <label class="custom-file-label" for="
-                customFile">Choose file</label>
-                <input type="file" class="
-                custom-file-input " id="customFile" name="
-                image">
-                <label class="custom-file-label" for="
-                customFile">Choose file</label>
+                <label class="custom-file-label" for="customFile">Choose file</label>
+                <input type="file" class="custom-file-input" id="customFile" value="image" name="image">
+                <label class="custom-file-label" for="customFile">Choose file</label>
                 
             </div>
 
