--- a/resources/views/design/category-index.html
+++ b/resources/views/design/category-index.html
@@ -31,8 +31,8 @@
                     <tbody>
                       <tr>
                         <td><a href="#">RA0449</a></td>
-                        <td>Udin Wayang</td>
-                        <td>Nasi Padang</td>
+                        <td>sumaiya</td>
+                        <td>Bima</td>
                         <td><span class="badge badge-success">Delivered</span></td>
                         <td><a href="#" class="btn btn-sm btn-primary">Detail</a></td>
                       </tr>
